[project]
name = "lsm6"
version = "0.2"
authors = [
  { name="Ron Smith", email="ron.smith@thataintworking.com" },
]
description = "A simple library for interfacing with an LSM6 IMU"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ronsmith/lsm6"
"Bug Tracker" = "https://github.com/ronsmith/lsm6/issues"

[tool.setuptools]
py-modules = ["lsm6", "i2chelper"]
